tests/models/enum/named/i128/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2)]
        value: i128
    },
}
fn main() {}
